fix: make tab items scrollable on mobile to avoid overflow
On tablet and smaller screen sizes, the tabs are going off the screen.
Link: 
https://www.prisma.io/docs/orm/prisma-client/setup-and-configuration/no-rust-engine

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -678,6 +678,9 @@ hr {
   .header-github-link {
     display: none;
   }
+  .tabs-container ul.tabs{
+    overflow-x: scroll;
+  }
 }
 
 .navbar__items--right > :last-child {
